--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@
 
 // @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Marmelad&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
