--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -252,6 +252,111 @@
         }
     }
 
+    .drinks {
+        &__item-coffee {
+            position: relative;
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            line-height: 24px;
+
+            &-price {
+                font-size: 16px;
+                font-weight: 500;
+                width: 10%;
+                text-align: right;
+            }
+
+            &-descr {
+                font-size: 16px;
+                font-weight: 500;
+                // width: 70%;
+                padding-left: 10px;
+            }
+
+            &-milk {
+                font-size: 12px;
+                color: red;
+                font-weight: 600;
+                text-align: center;
+            }
+        }
+
+        &__items-tea {
+
+            &-title {
+
+
+                &-name {
+                    text-transform: uppercase;
+                    padding-left: 10px;
+                    font-size: 30px;
+                    width: 25%;
+                }
+
+                &-descr {
+                    width: 30%;
+                    font-size: 10px;
+
+                }
+
+                &-size {
+                    width: 45%;
+                    text-align: end;
+                    font-size: 18px;
+                }
+            }
+        }
+
+        &__items-tea,
+        &__items-smoothies,
+        &__items-drinks {
+            padding-right: 10px;
+        }
+
+        &__item-tea,
+        &__item-smoothies,
+        &__item-drinks {
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            line-height: 24px;
+
+            &-descr {
+                font-size: 16px;
+                font-weight: 500;
+                width: 70%;
+                padding-left: 0px;
+            }
+
+            &-price {
+                font-size: 16px;
+                font-weight: 500;
+                // width: 10%;
+                text-align: right;
+            }
+
+            &-post {
+                margin-top: -10px;
+
+                &-descr {
+                    font-size: 12px;
+                    padding-left: 0px;
+                }
+            }
+        }
+
+        &__item-smoothies {
+            &-descr {
+                font-size: 16px;
+                font-weight: 500;
+                width: 90%;
+                padding-left: 0px;
+            }
+        }
+    }
+
 }
 
 @media(max-width: 768px) {
@@ -509,7 +614,138 @@
         }
     }
 
+    .drinks {
+        padding-bottom: 250px;
 
+        &__container {
+            display: block;
+        }
+
+        &__item-coffee {
+            position: relative;
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            line-height: 24px;
+
+            &-price {
+                font-size: 16px;
+                font-weight: 500;
+                width: 10%;
+                text-align: right;
+            }
+
+            &-descr {
+                font-size: 16px;
+                font-weight: 500;
+                // width: 70%;
+                padding-left: 10px;
+            }
+
+            &-milk {
+                font-size: 13px;
+                color: red;
+                font-weight: 600;
+                text-align: center;
+
+            }
+        }
+
+        &__items-tea {
+            &-title {
+                &-name {
+                    padding-left: 0px;
+                }
+            }
+        }
+
+        &__items-coffee,
+        &__items-tea,
+        &__items-smoothies,
+        &__items-drinks {
+            padding-right: 10px;
+            border-top: 3px solid rgb(130, 214, 3);
+            border-left: 3px solid rgb(130, 214, 3);
+            border-right: 3px solid rgb(130, 214, 3);
+            border-bottom: none;
+            padding-bottom: 10px;
+
+            &-title {
+                padding-left: 0px;
+            }
+        }
+        &__items-drinks {
+            border-bottom: 3px solid rgb(130, 214, 3);
+        }
+
+        &__item-tea,
+        &__item-smoothies,
+        &__item-drinks {
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            line-height: 24px;
+
+            &-descr {
+                font-size: 16px;
+                font-weight: 500;
+                width: 70%;
+                padding-left: 0px;
+            }
+
+            &-price {
+                font-size: 16px;
+                font-weight: 500;
+                // width: 10%;
+                text-align: right;
+            }
+
+            &-post {
+                margin-top: -10px;
+
+                &-descr {
+                    font-size: 12px;
+                    padding-left: 0px;
+                }
+            }
+        }
+
+        &__item-smoothies {
+            &-descr {
+                font-size: 16px;
+                font-weight: 500;
+                width: 90%;
+                padding-left: 0px;
+            }
+            &-noSugar {
+                right: 10px;
+            }
+    
+        }
+        &__items-smoothies {
+            &::before {
+                content: "";
+                position: absolute;
+                top: -17px;
+                transform: translateY(-50%);
+                left: 50%;
+                transform: translateX(-50%);
+                width: 30px;
+                height: 30px;
+                background: url("../icons/vegan.png")no-repeat 100%/cover;
+            }
+        }
+
+        &__item-coffee {
+            &-syrup {
+                border-radius: 3px;
+                padding: 5px;
+
+
+            }
+        }
+    }
 
 }
 
