--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -162,6 +162,6 @@ body {
 @import 'blocks/footer';
 @import 'blocks/menu';
 @import 'blocks/drinks';
-
+@import 'blocks/delivery';
 
 @import 'blocks/media';
