--- a/src/sass/blocks/_keyframes.scss
+++ b/src/sass/blocks/_keyframes.scss
@@ -30,11 +30,11 @@
     }
 
     66% {
-        background-image: url("../img/food/5.jpg");
+        background-image: url("../img/interier/main-mobile.jpg");
     }
 
     100% {
-        background-image: url("../img/food/5.jpg");
+        background-image: url("../img/interier/main-mobile.jpg");
     }
 }
 
