--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -409,6 +409,9 @@
                 font-size: 18px;
             }
         }
+        &__mode {
+            left: 40px;
+        }    
     }
 
 
@@ -802,6 +805,9 @@
         &__icons {
             width: 35%;
         }
+        &__mode {
+            left: 20px;
+        }    
     }
 
     .description {
