--- a/src/sass/blocks/_delivery.scss
+++ b/src/sass/blocks/_delivery.scss
@@ -67,9 +67,16 @@
         }
 
         &-logo {
-            padding: 5px;
-            width: 15%;
+            padding:  5px 0px 5px 0px;
+            width: 10%;
+            height: 90%;
             text-align: end;
+            img {
+                width: 100%;
+            }
+            // &:nth-child(3) {
+            //     margin-left: -25px;
+            // }
         }
     }
 
