--- a/src/sass/blocks/_keyframes.scss
+++ b/src/sass/blocks/_keyframes.scss
@@ -69,3 +69,13 @@
         transform: scale(1);
     }
 }
+
+@keyframes fade {
+    from {
+        opacity: 0.1;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
