--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -46,4 +46,35 @@
             }
         }
     }
+
+    &__reviews {
+        margin-top: 50px;
+        height: 300px;
+        background: url("../img/interier/main2CutDark.jpg") no-repeat 100%/cover;
+        background-attachment: fixed;
+        box-shadow: 0px 10px 8px 4px rgba(247, 248, 185, 0.3), 0px -10px 8px 4px rgba(247, 248, 185, 0.3);
+        display: flex;
+
+        &-item {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            &-descr {
+                color: azure;
+            }
+            &-photo {
+                width: 60px;
+                height: 60px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            &-name {
+                color: azure;
+            }
+        }
+    }
 }
