--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -54,26 +54,51 @@
         background-attachment: fixed;
         box-shadow: 0px 10px 8px 4px rgba(247, 248, 185, 0.3), 0px -10px 8px 4px rgba(247, 248, 185, 0.3);
         display: flex;
+        position: relative;
 
         &-item {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            width: 30%;
 
             &-descr {
                 color: azure;
+                font-size: 18px;
+                line-height: 22px;
             }
+
             &-photo {
                 width: 60px;
                 height: 60px;
+
                 img {
                     width: 100%;
                     height: 100%;
                 }
             }
+
             &-name {
                 color: azure;
+            }
+        }
+
+        &-dots {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            span {
+                width: 10px;
+                height: 10px;
+                border-radius: 100%;
+                border: 2px solid white;
             }
         }
     }
