--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -171,5 +171,6 @@ body {
 @import 'blocks/drinks';
 @import 'blocks/delivery';
 @import 'blocks/about';
+@import 'blocks/contacts';
 
 @import 'blocks/media';
