--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -51,6 +51,20 @@
         }
     }
 
+    .about {
+        &__wrapper {
+            justify-content: space-around;
+        }
+
+        &__reviews {
+            &-item {
+                &-descr {
+                    font-size: 15px;
+                }
+            }
+        }
+    }
+
 
 
 }
@@ -367,6 +381,30 @@
             width: 80%;
         }
     }
+
+    .about {
+        &__wrapper {
+            &-descr {
+                font-size: 16px;
+                line-height: 20px;
+
+                a {
+                    font-size: 18px;
+                }
+            }
+
+        }
+
+        &__reviews {
+            &-item {
+                width: 70%;
+
+                &-descr {
+                    font-size: 15px;
+                }
+            }
+        }
+    }
 }
 
 @media(max-width: 768px) {
@@ -409,9 +447,10 @@
                 font-size: 18px;
             }
         }
+
         &__mode {
             left: 40px;
-        }    
+        }
     }
 
 
@@ -791,6 +830,24 @@
         }
     }
 
+    .about {
+        &__wrapper {
+            flex-direction: column;
+            align-items: center;
+
+            &-descr {
+                width: 80%;
+
+            }
+
+            &-slider {
+                margin-top: 20px;
+                width: 80%;
+            }
+
+        }
+    }
+
 }
 
 @media(max-width: 576px) {
@@ -805,9 +862,10 @@
         &__icons {
             width: 35%;
         }
+
         &__mode {
             left: 20px;
-        }    
+        }
     }
 
     .description {
@@ -1099,6 +1157,45 @@
             font-weight: 500;
         }
     }
+
+    .about {
+        padding-bottom: 270px;
+
+        &__wrapper {
+
+            &-descr {
+
+                font-size: 19px;
+                width: 100%;
+
+                a {
+                    color: $green_color;
+                }
+            }
+
+            &-slider {
+                margin-top: 20px;
+                width: 100%;
+            }
+
+        }
+
+        &__reviews {
+
+            background-attachment: scroll;
+
+            &-item {
+                width: 90%;
+
+                &-descr {
+                    font-size: 14px;
+                    line-height: 18px;
+                }
+
+            }
+        }
+    }
+
 }
 
 // @media(max-width: 429px) {}
