--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -21,10 +21,12 @@
         color: rgb(222, 235, 235);
         text-shadow: 3px 3px 20px rgba(0, 0, 0, 0.9), -3px -3px 20px rgba(0, 0, 0, 0.9), -3px 3px 20px rgba(0, 0, 0, 0.9), 3px -3px 20px rgba(0, 0, 0, 0.9);
         text-align: center;
+        font-size: 20px;
     }
 
     &__phone {
         a {
+            font-size: 20px;
             display: block;
             text-align: center;
             color: rgb(222, 235, 235);
@@ -49,6 +51,7 @@
             text-shadow: 3px 3px 20px rgba(0, 0, 0, 0.9), -3px -3px 20px rgba(0, 0, 0, 0.9), -3px 3px 20px rgba(0, 0, 0, 0.9), 3px -3px 20px rgba(0, 0, 0, 0.9);
         }
         address {
+            font-size: 20px;
             margin: 0;
         }
     }
@@ -57,13 +60,16 @@
         justify-content: space-around;
         align-items:center;
         padding-top: 20px;
+        width: 100%;
         height: 448px;
         &-photo {
             width: 45%;
+            height: 100%;
             box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2), 10px 10px 8px 4px rgba(239, 240, 185, 0.2);
             img {
                 width: 100%;
-
+                height: 100%;
+                object-fit: cover;
             }
         }
         &-map {
