--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -405,6 +405,17 @@
             }
         }
     }
+
+    .contacts {
+        &__wrapper {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            padding-top: 20px;
+            width: 100%;
+            height: 400px;
+        }
+    }
 }
 
 @media(max-width: 768px) {
@@ -803,10 +814,7 @@
     }
 
     .delivery {
-
         background: url('../img/interier/concrete-mob.jpg') no-repeat 100%/cover;
-
-
 
         &__title {
             font-size: 26px;
@@ -848,6 +856,32 @@
         }
     }
 
+    .contacts {
+        &__wrapper {
+            flex-direction: column;
+            justify-content: center;
+            width: 100%;
+            height: 1050px;
+            padding-bottom: 50px;
+            &-photo {
+                margin-top: 25px;
+                width: 100%;
+                height: 400px;
+                box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2), 10px 10px 8px 4px rgba(239, 240, 185, 0.2);
+                img {
+                    width: 100%;
+                    height: 100%;
+                    // object-fit: cover;
+                }
+            }
+            &-map {
+                padding-top: 30px;
+                width: 100%;
+                height: 400px;
+                box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2), 10px 10px 8px 4px rgba(239, 240, 185, 0.2);
+            }
+        }
+    }
 }
 
 @media(max-width: 576px) {
@@ -1192,6 +1226,33 @@
                     line-height: 18px;
                 }
 
+            }
+        }
+    }
+    .contacts {
+        &__wrapper {
+            flex-direction: column;
+            justify-content: flex-start;
+            width: 100%;
+            height: 950px;
+            padding-bottom: 50px;
+            padding-top: 0;
+            &-photo {
+                
+                width: 100%;
+                height: 400px;
+                box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2), 10px 10px 8px 4px rgba(239, 240, 185, 0.2);
+                img {
+                    width: 100%;
+                    height: 100%;
+                    // object-fit: cover;
+                }
+            }
+            &-map {
+                padding-top: 30px;
+                width: 100%;
+                height: 400px;
+                box-shadow: -10px -10px 8px 4px rgba(239, 240, 185, 0.2), 10px 10px 8px 4px rgba(239, 240, 185, 0.2);
             }
         }
     }
