--- a/src/sass/blocks/_drinks.scss
+++ b/src/sass/blocks/_drinks.scss
@@ -206,7 +206,7 @@
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            left: -20px;
+            left: calc(-20px);
             width: 35px;
             height: 35px;
             background: url("../icons/vegan.png")no-repeat 100%/cover;
