--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -444,7 +444,7 @@
     }
 
     .promo {
-        animation: showBackgroundMobile 18s ease infinite alternate;
+        // animation: showBackgroundMobile 18s ease infinite alternate;
 
         &__goodMorning {
             width: 80%;
@@ -793,10 +793,11 @@
             &::before {
                 content: "";
                 position: absolute;
-                top: -17px;
-                transform: translateY(-50%);
-                left: 50%;
-                transform: translateX(-50%);
+                top: 10px;
+                // transform: translateY(-50%);
+                left: calc(100%);
+                // right: 20px;
+                transform: translateX(-80px);
                 width: 30px;
                 height: 30px;
                 background: url("../icons/vegan.png")no-repeat 100%/cover;
