--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100vh;
     // background: url("../img/interier/main1.jpg");
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.6488731234681373) 0%, rgba(0, 0, 0, 0.44159021030287116) 0%, rgba(0, 0, 0, 0) 100%);
+    // background: linear-gradient(90deg, rgba(0, 0, 0, 0.6488731234681373) 0%, rgba(0, 0, 0, 0.44159021030287116) 0%, rgba(0, 0, 0, 0) 100%);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: 100%;
