--- a/src/sass/blocks/_drinks.scss
+++ b/src/sass/blocks/_drinks.scss
@@ -93,7 +93,7 @@
             font-size: 16px;
             color: red;
             font-weight: 600;
-            text-align: center;
+            padding-left: 10px;
         }
 
         &-syrup {
@@ -204,11 +204,13 @@
         &::before {
             content: "";
             position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            left: calc(-20px);
-            width: 35px;
-            height: 35px;
+            top: 10px;
+            // transform: translateY(-50%);
+            left: calc(100%);
+            // right: 20px;
+            transform: translateX(-80px);
+            width: 30px;
+            height: 30px;
             background: url("../icons/vegan.png")no-repeat 100%/cover;
         }
     }
@@ -244,8 +246,8 @@
         }
         &-noSugar {
             position: absolute;
-            right: 120px;
-            top: 10px;
+            right: 10px;
+            top: 9px;
             width: 30px;
             height: 30px;
             img {
@@ -256,6 +258,7 @@
 
             }
         }
+        
 
 
     }
