--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -796,7 +796,7 @@
                 font-size: 13px;
                 color: red;
                 font-weight: 600;
-                text-align: center;
+                padding-left: 0;
 
             }
         }
